Add moving columns (includes components)

--- a/src/components/DataTable.scss
+++ b/src/components/DataTable.scss
@@ -10,3 +10,9 @@
     // background-color: #ffffff;
   }
 }
+.expandedRow {
+  background-color: #e7e7e7;
+}
+#expanded-rows-hideout {
+  display: none;
+}
